--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "19.0.0",
     "react-native": "0.79.3",
     "react-native-paper": "^5.14.5",
+    "react-native-paper-dropdown": "^2.3.1",
     "react-native-safe-area-context": "^5.4.1",
     "react-native-screens": "^4.11.1",
     "react-native-url-polyfill": "^2.0.0",
